@@ -3,6 +3,7 @@
 * Bugfixes
 
   * (JRuby) Fix "null document" error when parsing an empty IO in jruby 1.7.3. #883
+  * (MRI) Fix segfault when there is no default subelement for an HTML node. #917
 
 * Minor Enhancements
 
